tests/NormalTests/paczka1/small_fuzzy/36384403.err
Error in line 2: lZQa A930 65,4
Error in line 4: CDL A867 19,9
